--- a/app/views/pags/pag1.html.erb
+++ b/app/views/pags/pag1.html.erb
@@ -1,2 +1,18 @@
-<h1>Pags#pag1</h1>
-<p>Find me in app/views/pags/pag1.html.erb</p>
+<div class="jumbotron">
+  <h1>Hola, mundo!!!</h1>
+  <p>...</p>
+  <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+</div>
+
+
+<table class="table">
+<% @users.each do |u| %>
+<tr>
+<td><%= u %></td>
+</tr>
+<% end %>
+</table>
+
+<script>
+$.backstretch("http://dl.dropbox.com/u/515046/www/garfield-interior.jpg");
+</script>
